--- a/assets/css/scss/lsx-team.scss
+++ b/assets/css/scss/lsx-team.scss
@@ -251,6 +251,10 @@
 			margin-left: -15px;
 			margin-right: -15px;
 		}
+		.slick-dots {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 }
 
